# VolumetricGlassware

./: VolumetricGlassware.sln  pyproject.toml  readme.md  requirements.txt  setup.py
VolumetricGlassware/: VolumetricGlassware.py  VolumetricGlassware.pyproj  requirements.txt
VolumetricGlassware/Burette/: Burette_schema.json
VolumetricGlassware/Butyrometer/: Butyrometer_schema.json
VolumetricGlassware/Common/: AbstractGlassware.py  Enums.py
VolumetricGlassware/GraduatedPipette/: GraduatedPipette_schema.json  GraduatedPippete.py
VolumetricGlassware/MeasuringCylinder/: MeasuringCylinder_schema.json
VolumetricGlassware/VolumeticPipette/: VolumetricPipette_shema.json  VolumetricPippete.json  VolumetricPippeteUtility.py
VolumetricGlassware/VolumetricFlask/: VolumetricFlask.json  VolumetricFlask.py  VolumetricFlask_shema.json
VolumetricGlassware/VolumetricGlassware/: __init__
VolumetricGlassware/VolumetricGlassware/Burette/: Burette.py
VolumetricGlassware/VolumetricGlassware/Common/: AbstractGlassware.py  AbstractGlassware.pyi  Enums.py  MultipleMarked.py  SingleMarked.py  ToContain.py  ToContainSolution.py  ToContainSolution.pyi  ToDeliver.py  ToDeliverDrop.py  ToDeliverDrop.pyi  VolumeConvertor.py  VolumeElementHandler.py
VolumetricGlassware/VolumetricGlassware/GraduatedPipette/: GraduatedPipette.py  GraduatedPipettes.py
VolumetricGlassware/VolumetricGlassware/VolumetricFlask/: VolumetricFlask.py  (+1 more)
VolumetricGlassware/VolumetricPipette/: VolumetricPipette_schema.json  VolumetricPipette_shema.json  VolumetricPippete.json  VolumetricPippete.py  sample.cs
(+3 files in other folders)
